# LeAgent

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_en.md  README_lzh.md  README_zh.md  SECURITY.md  cliff.toml  mkdocs.yml  start.ps1  start.sh
backend/: .playwright_chromium_marker  README.md  alembic.ini  pyproject.toml
backend/docs/: ast-tools-boundary.md  code-gen-tool-args-parsing.md  tool-system.md
backend/docs/workflow-engine/: api-reference.md  architecture.md  art-asset-nodes.md  demo-flows-and-cron.md  io-reference.md  node-authoring.md  operations.md  overview.md
backend/leagent/: __init__.py  main.py  server.py
backend/leagent/agent/: __init__.py  base.py  coding_agent.py  content_parts.py  control.py  controller.py  current.py  deps.py  executor.py  hooks.py  multimodal.py  planner.py  query.py  query_engine.py  recovery.py  runtime_profile.py  script_agent.py  state.py  subagent.py  tool_use_context.py  transitions.py
backend/leagent/alembic/: env.py  runtime_config.py  script.py.mako  sync_runner.py
backend/leagent/api/: __init__.py  deps.py  middleware.py  router.py  router_deferred.py
backend/leagent/apps/: __init__.py
backend/leagent/bootstrap/: __init__.py  tools.py
backend/leagent/channels/: __init__.py  agent_bridge.py  base.py  manager.py  outbound_artifacts.py  registry.py  renderer.py
backend/leagent/chat_workflow/: __init__.py  arguments.py  compile.py  runner.py  schema.py  templates.py  workflow_embed.py
backend/leagent/cli/: __init__.py  app_cmd.py  auth_cmd.py  bootstrap.py  channels_cmd.py  chat_cmd.py  chats_cmd.py  clean_cmd.py  config_cmd.py  cron_cmd.py  daemon_cmd.py  env_cmd.py  http.py  init_cmd.py  main.py  providers_cmd.py  rules_cmd.py  skills_cmd.py  stream_handler.py  tasks_cmd.py  templates_cmd.py  utils.py  webhooks_cmd.py  workflows_cmd.py
backend/leagent/code/: __init__.py  artifacts.py  execution.py  fim.py  markup_guard.py  matplotlib_cjk.py  packages.py  pipeline.py  runner.py  sandbox.py  workspace.py  workspace_edit.py
backend/leagent/config/: __init__.py  config.py  constants.py  env_bootstrap.py  migrate_v2.py  settings.py  tier_env_guard.py  watcher.py
backend/leagent/context/: __init__.py  artifact_error_tracker.py  budget.py  cache.py  compression.py  file_state.py  ledger.py  manager.py  plugin.py  recipe.py  relevance.py  session_compression.py  types.py  working_set.py
backend/leagent/cron/: __init__.py  base.py  executor.py  hooks.py  manager.py  repository.py  scheduler.py
backend/leagent/db/: __init__.py  engine.py  service.py  sqlite_compat.py
backend/leagent/docgen/: __init__.py  charts.py  checklist.py  fonts.py  images.py  markdown.py  mathtext.py  model.py  omml.py  slides.py  tables.py  templates.py  themes.py  theming.py
backend/leagent/exceptions/: __init__.py  auth.py  base.py  handlers.py  llm.py  rule.py  tool.py  workflow.py
backend/leagent/extensions/: __init__.py  manager.py  official_registry.json
backend/leagent/file/: __init__.py  primitives.py  quality.py  sandbox.py  service.py  tool_output.py
backend/leagent/llm/: __init__.py  base.py  circuit_breaker.py  domain_registry.py  error_policy.py  model_catalog.py  model_registry.py  model_spec.py  provider_config.py  provider_plugin.py  providers_schema.py  registry.py  router.py  service.py  streaming.py  task_resolver.py  transport.py
backend/leagent/mcp/: __init__.py  base.py  client.py  constants.py  manager.py  proxy_tool.py
backend/leagent/memory/: __init__.py  agent_memory.py  cache.py  compact.py  compaction.py  embeddings.py  episodic.py  fake.py  formation.py  lexical_backend.py  maintenance.py  procedural.py  procedure_promotion.py  protocols.py  recall.py  semantic.py  types.py  vector.py  working_scratchpad.py
backend/leagent/project/: __init__.py  binaries.py  fs.py  git.py  manager.py  paths.py  proxy.py  runtime.py  templates.py  workspace.py  worktree.py
backend/leagent/prompts/: __init__.py  art_playbook.py  builder.py  context.py  control_agent.py  fingerprint.py  playbooks.py  registry.py  render.py  types.py
backend/leagent/rules/: __init__.py  base.py  engine.py  evaluator.py  loader.py
backend/leagent/runtime/: __init__.py  builder.py  context.py  definition.py  events.py  execution_factory.py  execution_registry.py  execution_run.py  platform.py  registry.py  runtime.py
backend/leagent/schema/: __init__.py  api.py  data.py  graph.py
backend/leagent/scripts/: run_migrations.py
backend/leagent/sdk/: __init__.py  _version.py  events.py  protocols.py  session.py
backend/leagent/services/: __init__.py  base.py  manager.py  rtsp_proxy.py  runtime.py  service_manager.py  settings_configure.py  settings_plan.py  smtp_defaults.py  (+2 more)
backend/leagent_core/: __init__.py
backend/scripts/: BENCHMARK_GUIDE.md  perf_baseline.json  perf_benchmark.py  perf_latest.json  perf_slow_consumer.json  run_excel_demo.py
backend/tests/: conftest.py  test_agent_base.py  test_agent_controller_reasoning_stream.py  test_agent_controller_tool_outputs.py  test_agent_executor.py  test_agent_hooks.py  test_agent_memory.py  test_agent_planner.py  test_agent_session_tasks.py  test_agent_trace.py  test_anthropic_provider.py  test_api.py  test_approval_flow.py  test_artifact_error_tracker.py  test_artifact_promotion_quality.py  test_attachment_resolution.py  test_auth_cmd_cli.py  test_auto_review.py  test_autocompact_split.py  test_canvas_file_preview_urls.py  test_canvas_html_bundle.py  test_canvas_html_paths.py  test_canvas_screenshot_api.py  test_canvas_sse_and_gen_ui.py  test_channels.py  test_chat_agent_memory_api.py  test_chat_api_services.py  test_chat_auto_title.py  test_chat_checkpoint_resume.py  test_chat_delete_session_hard.py  test_chat_message_ordering.py  test_chat_project_context.py  test_chat_projects.py  test_chat_prompt_preview_api.py  test_chat_session_attachments_api.py  test_chat_sse_wire_contract.py  test_chat_stream_extensions_merge.py  test_chat_workflow_compile.py  test_chat_workflow_extensions_merge.py  test_chat_workflow_schema.py  (+152 more)
(+1781 files in other folders)
