[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leagent"
version = "1.2.7"
description = "LeAgent — Intelligent Office Agent Platform"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
authors = [{ name = "Cheng Yuanqi", email = "vixues@gmail.com" }]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "gunicorn>=22.0.0",
    "python-multipart",
    "sse-starlette>=2.1.0",
    "websockets>=13.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "sqlite-vec>=0.1.6",
    "apscheduler>=3.10.0",
    "croniter>=2.0.0",
    "pytz>=2024.1",
    "openai>=1.57.0",
    "anthropic>=0.39.0",
    "httpx>=0.28.0",
    # Enable SOCKS proxies (ALL_PROXY=socks5://...) which are common on macOS proxy apps.
    "socksio>=1.0.0",
    "aiohttp>=3.9.0",
    "cryptography>=42.0.0",
    "qrcode>=7.4.0",
    "tiktoken>=0.8.0",
    "python-docx>=1.1.0",
    "pyantiword>=0.1.2",
    "pillow>=11.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
    "aiosmtplib>=3.0.0",
    "pyyaml>=6.0.0",
    "jinja2>=3.1.0",
    "aiofiles>=24.1.0",
    "orjson>=3.10.0",
    "prometheus-client>=0.21.0",
    "structlog>=24.4.0",
    "cachetools>=5.5.0",
    "jsonschema>=4.20.0",
    "nh3>=0.2.18",
    # Agent tools + code_execution subprocess share this env (not system Python).
    "matplotlib>=3.8.0",
    "python-pptx>=1.0.0",
    "reportlab>=4.2.0",
    # Default scientific + student/office stack (shared with code_execution).
    "scipy>=1.11.0",
    "sympy>=1.12",
    "seaborn>=0.13.0",
    "openpyxl>=3.1.0",
    "pandas>=2.2.0",
    "xlsxwriter>=3.2.0",
    "tabulate>=0.9.0",
    "markdown>=3.5.0",
    # Document generation subsystem (leagent.docgen) markdown -> IR parser.
    "markdown-it-py>=3.0.0",
    "mdit-py-plugins>=0.4.0",
    "linkify-it-py>=2.1.0",
    "latex2mathml>=3.81.0",
    # Default web search (bing_playwright) + scraper tools need Playwright.
    "playwright>=1.49.0",
]

[project.optional-dependencies]
mysql = [
    "pymysql>=1.1.0",
]
# Kept for extension-pack / docs compatibility; Playwright is now a core dependency.
browser = [
    "playwright>=1.49.0",
]
ocr = [
    "onnxruntime>=1.17.0",
    "rapidocr-onnxruntime>=1.3.0",
]
rag = [
    "onnxruntime>=1.17.0",
    "sentence-transformers>=2.7.0",
]
office = [
    "pymupdf>=1.25.0",
    "pypdf>=5.0.0",
    "pdf2image>=1.17.0",
    "pdfplumber>=0.11.0",
    "pandasql>=0.7.3",
    "kaleido>=0.2.0",
]
paddle = [
    "paddleocr",
    "paddlepaddle",
]
# Self-hosted diffusion models (SD/SDXL checkpoints + LoRA) run in-process.
# Heavy GPU stack — install with `uv sync --extra diffusion`.
diffusion = [
    "torch>=2.4.0",
    "diffusers>=0.31.0",
    "transformers>=4.46.0",
    "accelerate>=1.0.0",
    "safetensors>=0.4.0",
    "peft>=0.13.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "httpx",
    "playwright>=1.49.0",
    # Align with ``[office]`` stacks needed by ``tests/test_doc_tools.py`` (PyMuPDF / Excel).
    "pymupdf>=1.25.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "cython>=3.0.0",
]

[project.scripts]
leagent = "leagent.cli.main:cli"

[tool.hatch.build.targets.wheel]
packages = ["leagent"]

[tool.hatch.build.targets.wheel.force-include]
"leagent/extensions/official_registry.json" = "leagent/extensions/official_registry.json"

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = ["E501", "B008"]

[tool.ruff.lint.isort]
known-first-party = ["leagent"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-p no:launch_testing -p no:launch_ros -W ignore::pytest.PytestUnraisableExceptionWarning -W ignore::pytest.PytestUnhandledThreadExceptionWarning"
filterwarnings = [
    "ignore::DeprecationWarning",
    # Async subprocess / aiosqlite threads after loop teardown (harmless).
    "ignore::pytest.PytestUnraisableExceptionWarning",
    "ignore::pytest.PytestUnhandledThreadExceptionWarning",
]
markers = [
    "integration: end-to-end tests across agent loop and tools (offline by default)",
    "live: optional live LLM tests; requires DEEPSEEK_API_KEY and -m live",
]
